admins/git-repo/cult-junk/iptables
# Generated by ip6tables-save v1.4.12 on Wed Aug  7 17:28:53 2013
*filter
:INPUT ACCEPT [72:7998]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [45:4381]

-A INPUT -p tcp --dport 22 -j ACCEPT

-A OUTPUT -p tcp -m tcp --sport 22 -j ACCEPT
-A OUTPUT -p tcp --sport 80 -j ACCEPT
-A OUTPUT -d localhost -j ACCEPT

-A OUTPUT -p tcp -d 2a02:6b8:0:1a16::2:7 -j ACCEPT
-A OUTPUT -p tcp -d angelskin-dbs1.corba.dev.yandex.net -j ACCEPT
-A OUTPUT -p tcp -d ell-test01h.corba.yandex.net --dport 80 -j ACCEPT
-A OUTPUT -p tcp -d c.yandex-team.ru --dport 80 -j ACCEPT
-A OUTPUT -p tcp -d c.yandex-team.ru --dport 443 -j ACCEPT

-A OUTPUT -p tcp --dport 11211 -j ACCEPT

-A OUTPUT -p tcp -m tcp -j REJECT

COMMIT
# Completed on Wed Aug  7 17:28:53 2013
